# splitter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: api-design.md  deployment.md  openapi.yaml  splitter-logs.md  splitter-tasks.md  technical-design.md
src/: __init__.py  app.py
src/api/: errors.py  routes.py
src/core/: config.py  errors.py  protocols.py
src/models/: __init__.py  domain.py  schemas.py
src/providers/: __init__.py  factory.py
src/services/: auto_router.py  orchestrator.py
src/strategies/: __init__.py  base.py  framework.py  registry.py
tests/: test_api.py  test_auto_router.py  test_providers.py  test_strategies.py
