[project]
name = "splitter"
version = "0.1.0"
description = "Universal Document Parsing & Splitting Gateway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12,<5.0",
    "chonkie>=1.6.8",
    "fastapi>=0.115,<1.0",
    "langchain-text-splitters>=0.3,<0.5",
    "llama-index-core>=0.12,<0.15",
    "llama-index-embeddings-openai>=0.3,<0.6",
    "pydantic>=2.8,<3.0",
    "python-dotenv>=1.0,<2.0",
    "tree-sitter-language-pack>=1.8,<2.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[project.scripts]
splitter = "app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
